--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -36,7 +36,8 @@ const PROJECTS = [
       "Built and tested 15 ML models to predict Alzheimer's using the OASIS-2 MRI dataset. Analysed data, engineered features and compared performance using Python, TensorFlow and PyTorch.",
     github:
       "https://github.com/CrisCorreaS/AD-prediction-classification-models",
-    image: "/projects/ad-models.webp",
+    image:
+      "https://raw.githubusercontent.com/CrisCorreaS/portfolio.dev/refs/heads/main/public/projects/ad-models.webp",
     tags: [TAGS.R, TAGS.PYTHON, TAGS.TENSORFLOW],
   },
   {
@@ -46,7 +47,8 @@ const PROJECTS = [
     link: "https://gdg.community.dev/events/details/google-gdg-a-coruna-presents-inteligencia-artificial-en-la-deteccion-del-cancer/",
     github:
       "https://github.com/CrisCorreaS/Artificial-Intelligence-in-Cancer-Detection-Speaker-Session",
-    image: "/projects/ai-cancer.webp",
+    image:
+      "https://raw.githubusercontent.com/CrisCorreaS/portfolio.dev/refs/heads/main/public/projects/ai-cancer.webp",
     tags: [TAGS.PYTHON, TAGS.TENSORFLOW, TAGS.PYTORCH],
   },
 ];
