--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,28 +1,28 @@
 ---
-import ThemeToggle from "./ThemeToggle.astro"
+import ThemeToggle from "./ThemeToggle.astro";
 
 const navItems = [
   {
     title: "Experience",
     label: "experience",
-    url: "/#experience",
+    url: "https://criscorreas.github.io/portfolio.dev/#experience",
   },
   {
     title: "Projects",
     label: "projects",
-    url: "/#projects",
+    url: "https://criscorreas.github.io/portfolio.dev/#projects",
   },
   {
     title: "About me",
     label: "about-me",
-    url: "/#about-me",
+    url: "https://criscorreas.github.io/portfolio.dev/#about-me",
   },
   {
     title: "Contact",
     label: "contact",
     url: "mailto:correa.cristina@protonmail.com",
   },
-]
+];
 ---
 
 <header
@@ -48,43 +48,43 @@ const navItems = [
 
 <script>
   document.addEventListener("astro:page-load", () => {
-    const sections = document.querySelectorAll("section")
-    const navItems = document.querySelectorAll("header nav a")
+    const sections = document.querySelectorAll("section");
+    const navItems = document.querySelectorAll("header nav a");
 
     const callback = (entries: any[]) => {
       entries.forEach((entry) => {
         if (entry.isIntersecting) {
           navItems.forEach((item) => {
             if (item.getAttribute("aria-label") == entry.target.id) {
-              item.classList.add("text-purple-500")
+              item.classList.add("text-purple-500");
             } else {
-              item.classList.remove("text-purple-500")
+              item.classList.remove("text-purple-500");
             }
-          })
+          });
         }
-      })
-    }
+      });
+    };
 
     const observer = new IntersectionObserver(callback, {
       root: null,
       rootMargin: "0px",
       threshold: 0.3,
-    })
+    });
 
     sections.forEach((section) => {
-      observer.observe(section)
-    })
+      observer.observe(section);
+    });
 
     document.onvisibilitychange = () => {
       if (document.visibilityState === "hidden") {
-        observer.disconnect()
+        observer.disconnect();
       } else {
         sections.forEach((section) => {
-          observer.observe(section)
-        })
+          observer.observe(section);
+        });
       }
-    }
-  })
+    };
+  });
 </script>
 
 <style>
